fix: wrong font-family order

--- a/app/assets/style/config/_base.scss
+++ b/app/assets/style/config/_base.scss
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap");
 
 body {
-  font-family: "Noto Sans TC", "Roboto", serif;
+  font-family: "Roboto", "Noto Sans TC", serif;
   font-size: 20px;
   line-height: 1.5;
 }
